--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <nav class="navbar navbar-expand-sm bg-info navbar-dark fixed-top" id="main-nav" >
     <div class="container">
-      <a href="index.html" class="navbar-brand">унивърсалбау еоод</a>
+      <a href="index.html" class="navbar-brand">универсалбау еоод</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,12 +41,12 @@
  <header id="home-section" class="bg-light py-1">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6 d-lg-block">
+      <div class="col-md-6 d-md-block">
         <h4 class="display-4 text-center">Интелигентният дом</h4>
         <p class="lead">технологии, сигурност и удобство</p>
         <img src="img/logo.png" alt="" class="img-fluid.max-width: 100%">
       </div>
-      <div class="col-lg-6">
+      <div class="col-md-6">
         <img src="img/smarthome1.jpg" alt="" class="img-fluid mt-4 rounded 5px">
       </div>
     </div>
@@ -59,7 +59,7 @@
   <div class="container">
     <div class="row">
       <div class="col text-center py-5">
-        <h4 class="display-4">Унивърсалбау ЕООД</h4>
+        <h4 class="display-4">Универсалбау ЕООД</h4>
         <p class="lead">надеждният партньор за интелигетнтите решения във Вашия дом</p>
       </div>
     </div>
@@ -76,7 +76,7 @@
           </div>
           <div class="col-md-6">
             <p class="about text-secondary text-justify mt-3">
-              Унивърсалбау ЕООД е новоучредена фирма, която има за цел да предоставя ефективни решения за дома и офиса чрез внедряване на иновативни технологии и организиране на тяхното интегрирано управление с помощта на съвременните комуникационни средства.<br>Високо качество на предлаганите услуги и коректно партньорство в отношенията със своите клиенти са сред основните принципи в дейността на дружеството.
+              Универсалбау ЕООД е новоучредена фирма, която има за цел да предоставя ефективни решения за дома и офиса чрез внедряване на иновативни технологии и организиране на тяхното интегрирано управление с помощта на съвременните комуникационни средства.<br>Високо качество на предлаганите услуги и коректно партньорство в отношенията със своите клиенти са сред основните принципи в дейността на дружеството.
             </p>
           </div>
         </div>
@@ -209,7 +209,7 @@
                         <input type="email" class="form-control form-control-md" placeholder="email">
                     </div>
                     <div class="form-group">
-                        <input type="message" class="form-control form-control-md" placeholder="Вашето запитване">
+                        <input type="text" class="form-control form-control-md" placeholder="Вашето запитване">
                     </div>
                     <div class="d-flex">
                             <div class="custom-control custom-checkbox">
