--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Universalbau</title>
 </head>
 
-<body data-spy="scroll" data-target="#main-nav" id="home">
+<body data-spy="scroll" data-target="#main-nav" >
 
   <nav class="navbar navbar-expand-sm bg-info navbar-dark fixed-top" id="main-nav" >
     <div class="container">
@@ -38,7 +38,7 @@
 
  <!--HOME SECTION-->
 
- <header id="home-section" class="bg-light py-1">
+ <header id="home" class="bg-light py-1">
   <div class="container">
     <div class="row">
       <div class="col-md-6 d-md-block">
@@ -233,7 +233,7 @@
          <div class="row">
            <div class="col text-white text-center py-2">
              <p>Universabau Copyright &copy; 2019
-                <!-- <span id="year"></span>  -->
+                <span id="year"></span> 
              </p>
            </div>
          </div>
