--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="row">
       <div class="col-md-6 d-md-block">
         <h4 class="display-4 text-center">Интелигентният дом</h4>
-        <p class="lead">технологии, сигурност и удобство</p>
+        <p class="lead">смарт технологии, сигурност и удобство</p>
         <img src="img/logo.png" alt="" class="img-fluid.max-width: 100%">
       </div>
       <div class="col-md-6">
@@ -60,7 +60,7 @@
     <div class="row">
       <div class="col text-center py-5">
         <h4 class="display-4">Универсалбау ЕООД</h4>
-        <p class="lead">надеждният партньор за интелигетнтите решения във Вашия дом</p>
+        <p class="lead">надеждният партньор за интелигетнтите решения във Вашия дом и офис</p>
       </div>
     </div>
    </div>
@@ -90,7 +90,7 @@
             <div class="row">
               <div class="col text-center py-5">
                 <h4 class="display-4 text-light">Предлагани услуги</h4>
-                <p class="lead text-light">за Вашето удобство и комфорт</p>
+                <p class="lead text-light">за Вашето удобство и комфорт в дома и офиса</p>
               </div>
             </div>
            </div>
@@ -159,6 +159,7 @@
       <div class="row">
         <div class="col text-center py-5">
           <h4 class="display-4">Винаги на Ваше разположение</h4>
+          <p class="lead">Универсалбау ЕООД, ЕИК 175038165<br> гр. София 1142, ул. "Проф. Фритьоф Нансен" № 15, ет. 4, ап. 7</p>
         </div>
       </div>
     </div>
@@ -176,7 +177,7 @@
                   <i class="fas fa-mobile-alt"></i>
               </div>
               <div class="p-4 align-self-end">
-                  +359 888 800 0999
+                  +359 887 084 633
               </div>
           </div>
           <div class="d-flex">
@@ -184,15 +185,14 @@
                 <i class="far fa-envelope"></i>
             </div>
             <div class="p-4 align-self-end">
-                smartface@gmail.com
+                bonovu@mail.bg
             </div>
           </div>
           <div class="d-flex">
             <div class="p-4 align-self-start">
-                <i class="fas fa-home"></i>
+                <button type="button" class="btn btn-sm bg-info btn-fb"><a href="https://www.facebook.com/Universalbau-Ltd-103356817720238" class="text-light no-underline"><i class="fab fa-facebook-f pr-1"></i>Facebook</a></button>
             </div>
             <div class="p-4 align-self-end">
-                  Адрес: ул. "Черна гора", 19
             </div>
           </div>
         </div>
@@ -200,7 +200,6 @@
         <div class="col-md-6">
           <div class="card bg-info card-form mt-4 rounded 5px">
             <div class="card-body">
-              <h5>Форма за контакт</h5>
                 <form>
                     <div class="form-group">
                       <input type="text" class="form-control form-control-md" placeholder="Име">
@@ -228,17 +227,17 @@
  </section> 
 
   <!-- FOOTER -->
-   <footer id="footer" class="bg-info footer-dark">
+   <footer id="footer" class="bg-info footer-dark py-1">
        <div class="container">
          <div class="row">
-           <div class="col text-white text-center py-2">
-             <p>Universabau Copyright &copy; 2019
-                <span id="year"></span> 
-             </p>
+           <div class="col text-white text-center">
+             <p>Universabau Copyright &copy; 2019<br>
+              <a href="#privacy" class="text-light small">Privacy policy</a>
+              </p>
            </div>
          </div>
        </div>
-     </footer>
+    </footer>
 
      <script   src="https://code.jquery.com/jquery-3.2.1.js"
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
