--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
  <header id="home" class="bg-light py-1">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 d-md-block">
+      <div class="info-container col-md-6 d-md-block">
         <h4 class="display-4 text-center">Интелигентният дом</h4>
         <p class="lead">смарт технологии, сигурност и удобство</p>
-        <img src="img/logo.png" alt="" class="img-fluid.max-width: 100%">
+        <img src="img/logo.png" alt="" class="logo img-fluid.max-width: 100%">
       </div>
       <div class="col-md-6">
         <img src="img/smarthome1.jpg" alt="" class="img-fluid mt-4 rounded 5px">
