--- a/index.html
+++ b/index.html
@@ -102,45 +102,66 @@
     <section id="services-section" class="bg-light">
         <div class="container">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 text-secondary">
                 <div class="d-flex">
-                  <div class="p-4 align-self-start">
+                  <div class="p-2 align-self-start">
                     <i class="fas fa-check fa-1x"></i>
                   </div>
-                  <div class="p-4 align-self-end">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex magnam earum ratione harum ad.
+                  <div class="p-2 align-self-end">
+                    Умен дом и офис
+                  </div>
+                </div>
+                <div class="d-flex">
+                  <div class="p-2 align-self-start">
+                    <i class="fas fa-check fa-1x"></i>
+                  </div>
+                  <div class="p-2 align-self-end">
+                    Системи за сигурност
+                  </div>
+                </div>
+                <div class="d-flex">
+                  <div class="p-2 align-self-start">
+                    <i class="fas fa-check fa-1x"></i>
+                  </div>
+                  <div class="p-2 align-self-end">
+                    Контрол на достъп
+                  </div>
+                </div>
+                <div class="d-flex">
+                  <div class="p-2 align-self-start">
+                    <i class="fas fa-check fa-1x"></i>
+                  </div>
+                  <div class="p-2 align-self-end">
+                    Откриване и демонтиране на скрити камери и микрофони
+                  </div>
+                </div>
+                <div class="d-flex">
+                  <div class="p-2 align-self-start">
+                    <i class="fas fa-check fa-1x"></i>
+                  </div>
+                  <div class="p-2 align-self-end">
+                    Откриване и деинсталиране на „шпионски“ софтуер
+                  </div>
+                </div>
+                <div class="d-flex">
+                  <div class="p-2 align-self-start">
+                    <i class="fas fa-check fa-1x"></i>
+                  </div>
+                  <div class="p-2 align-self-end">
+                    „Кибер хигиена“ на Вашия офис
+                  </div>
+                </div>
+                <div class="d-flex">
+                  <div class="p-2 align-self-start">
+                    <i class="fas fa-check fa-1x"></i>
+                  </div>
+                  <div class="p-2 align-self-end">
+                    Цялостно решение при управлението на Вашия имот
                   </div>
                 </div>
                 <div class="d-flex">
                   <div class="p-4 align-self-start">
-                    <i class="fas fa-check fa-1x"></i>
-                  </div>
-                  <div class="p-4 align-self-end">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex magnam earum ratione harum ad.
-                  </div>
-                </div>
-                <div class="d-flex">
-                  <div class="p-4 align-self-start">
-                    <i class="fas fa-check fa-1x"></i>
-                  </div>
-                  <div class="p-4 align-self-end">
-                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex magnam earum ratione harum ad.
-                  </div>
-                </div>
-                <div class="d-flex">
-                  <div class="p-4 align-self-start">
-                    <i class="fas fa-check fa-1x"></i>
-                  </div>
-                  <div class="p-4 align-self-end">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex magnam earum ratione harum ad.
-                  </div>
-                </div>
-                <div class="d-flex">
-                  <div class="p-4 align-self-start">
-                    <i class="fas fa-check fa-1x"></i>
-                  </div>
-                  <div class="p-4 align-self-end">
-                              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex magnam earum ratione harum ad.
+                    <a href="services.html" class="btn btn-outline-info btn-sm" role="button" aria-pressed="true">Виж повече</a>
                   </div>
                 </div>
               </div>
@@ -176,7 +197,7 @@
               <div class="p-4 align-self-start">
                   <i class="fas fa-mobile-alt"></i>
               </div>
-              <div class="p-4 align-self-end">
+              <div class="p-4 align-self-end text-secondary">
                   +359 887 084 633
               </div>
           </div>
@@ -184,7 +205,7 @@
             <div class="p-4 align-self-start">
                 <i class="far fa-envelope"></i>
             </div>
-            <div class="p-4 align-self-end">
+            <div class="p-4 align-self-end text-secondary">
                 bonovu@mail.bg
             </div>
           </div>
