--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 d-md-block">
-        <h4 class="display-4 text-center">Интелигентният дом</h4>
+        <h4 class="display-4 text-center">Вашият "умен" дом и офис</h4>
         <p class="lead">смарт технологии, сигурност и удобство</p>
         <img src="img/logo.png" alt="" class="img-fluid.max-width: 100%">
       </div>
@@ -76,7 +76,7 @@
           </div>
           <div class="col-md-6">
             <p class="about text-secondary text-justify mt-3">
-              Универсалбау ЕООД е новоучредена фирма, която има за цел да предоставя ефективни решения за дома и офиса чрез внедряване на иновативни технологии и организиране на тяхното интегрирано управление с помощта на съвременните комуникационни средства.<br>Високо качество на предлаганите услуги и коректно партньорство в отношенията със своите клиенти са сред основните принципи в дейността на дружеството.
+              „Универсалбау“ ЕООД е дружество, което се стреми да достави на своите клиенти едно цялостно решение при организирането и оборудването на дома и офиса чрез традиционни, иновативни и смарт решения и техническо изпълнение. „Универсаубау“ ЕООД разполага с високо квалифцирани специалисти, които имат богат опит и нужните компетенции, за да изпълнят високите изисквания на всеки свой клиент.
             </p>
           </div>
         </div>
@@ -90,7 +90,7 @@
             <div class="row">
               <div class="col text-center py-5">
                 <h4 class="display-4 text-light">Предлагани услуги</h4>
-                <p class="lead text-light">за Вашето удобство и комфорт в дома и офиса</p>
+                <p class="lead text-light">иновации, сигурност и комфорт във Вашия дом и офис</p>
               </div>
             </div>
            </div>
@@ -252,9 +252,8 @@
        <div class="container">
          <div class="row">
            <div class="col text-white text-center">
-             <p>Universabau Copyright &copy; 2019<br>
-              <a href="#privacy" class="text-light small">Privacy policy</a>
-              </p>
+             <p>Universabau Copyright &copy; 2019</p>
+             <a class="btn btn-outline-light btn-sm" href="policy.html" role="button">Privacy policy</a>
            </div>
          </div>
        </div>
