--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
                         <h5 class="display-5 text-secondary mt-3">„Кибер хигиена“ на Вашия офис</h5>
                         <ul class="serv text-secondary">
                             <li class="main-item">Анализиране на потенциалните заплахи в офиса</li>
-                            <li class="main-item">Разработване на правила и процедури за „кибер хигиена“ във фирмата</li>
+                            <li class="main-item">Разработване на правила и процедури за „кибер хигиена“</li>
                         </ul>
                         <h5 class="display-5 text-secondary mt-3">Цялостно решение при управлението на Вашия имот</h5>
                         <ul class="serv text-secondary">
@@ -119,9 +119,8 @@
             <div class="container">
               <div class="row">
                 <div class="col text-white text-center">
-                  <p>Universabau Copyright &copy; 2019<br>
-                   <a href="#privacy" class="text-light small">Privacy policy</a>
-                   </p>
+                  <p>Universabau Copyright &copy; 2019</p>
+                    <a class="btn btn-outline-light btn-sm" href="policy.html" role="button">Privacy policy</a>
                 </div>
               </div>
             </div>
