--- a/services.html
+++ b/services.html
@@ -46,10 +46,9 @@
                       <ul class="serv text-secondary">
                           <li class="main-item">Смарт осветление</li>
                           <li class="main-item">Климатизация</li>
-                          <li class="main-item">Умни домашни уреди</li>
-                          <li class="main-item">Системи за напояване</li>
-                          <li class="main-item">Умна Мултимедия</li>
+                          <li class="main-item">Умни домашни уреди и офис оборудване</li>
                           <li class="main-item">Автоматични гаражни врати</li>
+                          <li class="main-item">Системи за напояване</li>
                       </ul>
                       <h5 class="display-5 text-secondary mt-3">Системи за сигурност</h5>
                       <ul class="serv text-secondary">
@@ -75,7 +74,7 @@
                         </ul>
                         <h5 class="display-5 text-secondary mt-3">Откриване и деинсталиране на „шпионски“ софтуер</h5>
                         <ul class="serv text-secondary">
-                            <li class="main-item">В мобилни телефони, таблети, лаптоп и десктоп компютри</li>
+                            <li class="main-item">В мобилни телефони, таблети, лаптоп и десктоп компютри и офис оборудване</li>
                         </ul>
                         <h5 class="display-5 text-secondary mt-3">„Кибер хигиена“ на Вашия офис</h5>
                         <ul class="serv text-secondary">
@@ -115,7 +114,7 @@
 
 
     <!-- FOOTER -->
-    <footer id="footer" class="bg-info footer-dark fixed-bottom">
+    <footer id="footer" class="bg-info footer-dark">
             <div class="container">
               <div class="row">
                 <div class="col text-white text-center">
